# taxonomy-agent

./: .gitignore  CITATION.cff  CONTRIBUTING.md  DEPLOY.md  HANDOFF.md  LICENSE  README.md  __main__.py  agent.py  app.py  cost.py  judge.py  llm.txt  modal_app.py  prompts.py  pyproject.toml  requirements.txt  tools.py
.github/workflows/: ci.yml
.streamlit/: config.toml
demo/: __init__.py  guards.py  helpers.py  sidebar.py  theme.py  viz.py
demo/tabs/: __init__.py  compare.py  history.py  inspect.py  run.py  start.py
eval/: __init__.py  __main__.py  corpora.py  generate_reasoning.py  runner.py  synth_reasoning.py
eval/baselines/: __init__.py  embed_cluster_llm.py  single_shot_llm.py
eval_data/: cot_patterns.jsonl  cot_patterns_pre_anon.jsonl.bak  cot_patterns_pre_hybrid.jsonl.bak  cot_patterns_v2.jsonl  cot_patterns_v2_all.jsonl  cot_patterns_with_domain.jsonl  cot_strategy_clean.jsonl  cot_strategy_glm.jsonl  cot_strategy_hex.jsonl  cot_strategy_synth.jsonl  cot_strategy_synth_v2.jsonl  darkbench.jsonl  disposition_pilot.jsonl  disposition_pilot_dsv4.jsonl  disposition_pilot_v2.jsonl  hint_prompts_raw.jsonl  strategy_clean_verify_audit.jsonl  strategy_corpus_glm_raw.jsonl  strategy_corpus_raw.jsonl  strategy_corpus_v1_stripped.jsonl  strategy_corpus_v2_raw.jsonl  strategy_glm_verify_audit.jsonl  strategy_pilot.jsonl  strategy_v2_pilot.jsonl  strategy_v2_verify_audit.jsonl  strategy_verify_audit.jsonl
example/: config.yaml  instruction.txt  items.jsonl
example_runs/20_newsgroups/: classifications.jsonl  cost.json  map_coords.json  meta.json  representative.json  taxonomy.json  trace.jsonl
example_runs/darkbench_manipulation/: classifications.jsonl  cost.json  map_coords.json  meta.json  representative.json  taxonomy.json  trace.jsonl
example_runs/darkbench_manipulation_v2/: classifications.jsonl  cost.json  meta.json  representative.json  taxonomy.json  trace.jsonl
notebooks/: labels.csv  quickstart.ipynb
paper/: README.md  bib_audit_report.md  bib_audit_verdicts.json  depth_audit_report.md  main.tex  method_soundness_audit.md  proofread_findings.json  proofread_punch_list.md  proofread_rerun_punch.md  references.bib  section_audit_punch.md
paper/data/: .gitignore  aggregate_cheap_seeds.py  aggregate_topicgpt_seeds.py  bertopic_darkbench_axis.json  bertopic_darkbench_axis.py  bertopic_sweep.json  bertopic_sweep.py  bertopic_sweep_3seeds.json  bertopic_sweep_3seeds.py  build_hex_corpus.py  build_hint_prompts.py  convergence_crosscheck.json  convergence_crosscheck.py  corpus_composition.md  cot_confusion.json  cot_per_domain.json  cot_per_domain.py  cot_results.json  darkbench_prose_draft.md  filter_hint_traces.py  gen_disposition_pilot.py  gen_strategy_corpus.py  gen_strategy_corpus_v2.py  gen_strategy_pilot.py  generate_hint_traces.py  leakage_baseline.md  nanda_baseline.py  nanda_baseline_result.json  nanda_baseline_seed42.json  nanda_baseline_seed43.json  nanda_baseline_seed44.json  nanda_clean_seed42.json  nanda_clean_seed43.json  nanda_gem_seed42.json  nanda_gem_seed43.json  nanda_gem_seed44.json  nanda_glm_seed42.json  nanda_glm_seed43.json  nanda_glm_seed44.json  new_baselines.json  (+3 more)
paper/data/brady_out/: brady_islam_20ng_seed42.jsonl  brady_islam_20ng_seed42.meta.json  brady_islam_20ng_seed42_mcs10.jsonl  brady_islam_20ng_seed42_mcs10.meta.json  brady_islam_20ng_seed42_mcs15.jsonl  brady_islam_20ng_seed42_mcs15.meta.json  brady_islam_20ng_seed42_mcs2.jsonl  brady_islam_20ng_seed42_mcs2.meta.json  brady_islam_20ng_seed42_mcs3.jsonl  brady_islam_20ng_seed42_mcs3.meta.json  brady_islam_20ng_seed43.jsonl  brady_islam_20ng_seed43.meta.json  brady_islam_20ng_seed43_mcs3.jsonl  (+5 more)
paper/sections/: abstract.tex  appendix.tex  conclusion.tex  eval_methodology.tex  eval_results.tex  evaluation.tex  implementation.tex  introduction.tex  limitations.tex  related.tex  system.tex
paper/slides/: advisor_overview.md  advisor_overview.tex
scripts/: precompute_example_viz.py
taxonomy_agent/: __init__.py  __main__.py  agent.py  cost.py  judge.py  prompts.py  tools.py
taxonomy_agent/eval/: __main__.py  corpora.py  generate_advice_prompts.py  metrics.py  runner.py  synth_reasoning.py
taxonomy_agent/example/: config.yaml  instruction.txt  items.jsonl
tests/: conftest.py  test_apply_ops.py  test_cost.py  test_eval_metrics.py  test_judge.py  test_load_items.py  test_ops_unit.py  test_parse_json.py  test_prompt.py  test_run_integration.py  test_run_result.py  test_synth_reasoning.py  test_tools.py
(+107 files in other folders)
