[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taxonomy-agent"
version = "0.1.0"
description = "Discover and apply an interpretable taxonomy along a single axis of variation in a text corpus."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Quang Minh Nguyen"}]
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langgraph>=1.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "streamlit>=1.30",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
# After `pip install -e .` from this directory, `taxonomy ui` and
# `taxonomy --config ...` become available on PATH.
taxonomy = "taxonomy_agent.__main__:main"

# The library lives in the taxonomy_agent/ package directory. app.py, modal_app.py,
# example/, and example_runs/ sit at the repo root (the demo and its data).
[tool.setuptools.packages.find]
include = ["taxonomy_agent*"]
