[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taxonomy-agent"
version = "0.1.0"
description = "Discover and apply an interpretable taxonomy along a single axis of variation in a text corpus."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Quang Minh Nguyen"}]
requires-python = ">=3.10"
keywords = [
    "taxonomy",
    "topic-modeling",
    "text-classification",
    "llm",
    "agent",
    "annotation",
    "nlp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langgraph>=1.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "streamlit>=1.30",
    "pandas>=2.0",
]

[project.urls]
Homepage = "https://github.com/ngqm/taxonomy-agent"
Repository = "https://github.com/ngqm/taxonomy-agent"
Demo = "https://ngqm--taxonomyagent.modal.run"

[project.optional-dependencies]
eval = ["scikit-learn>=1.1", "numpy>=1.23"]
dev = ["pytest>=7.0", "scikit-learn>=1.1", "numpy>=1.23"]

[project.scripts]
# After `pip install -e .` from this directory, `taxonomy ui` and
# `taxonomy --config ...` become available on PATH.
taxonomy = "taxonomy_agent.__main__:main"

# The library lives in the taxonomy_agent/ package directory (including the
# bundled example/ demo corpus, shipped via package-data below). app.py,
# modal_app.py, and example_runs/ sit at the repo root (the demo app and its data).
[tool.setuptools.packages.find]
include = ["taxonomy_agent*"]

[tool.setuptools.package-data]
taxonomy_agent = ["example/*"]
